--- a/project/animacije.css
+++ b/project/animacije.css
@@ -1,10 +1,22 @@
 @keyframes prva-animacija {
-    from {
+    0% {
         width: 10px;
         height: 10px;
         background-color: red;
     }
-    to {
+    20% {
+        width: 300px;
+        height: 300px;
+        background-color: orange;
+        border-radius: 100%;
+    }
+    50% {
+        width: 40px;
+        height: 40px;
+        background-color: yellow;
+        border-radius: 0%;
+    }
+    100% {
         width: 400px;
         height: 50px;
         background-color: green;
@@ -16,4 +28,45 @@
     border: 1px solid black;
     box-sizing: border-box;
     animation: prva-animacija 4s alternate 2 forwards;
+}
+@keyframes prikaz-inputa {
+    0% {
+        width: 0px;
+        height: 0px;
+        background-color: blue;
+        border-radius: 20px;
+    }
+    20% {
+        width: 20px;
+        height: 20px;
+        background-color: red;
+        border-radius: 20px;
+    }
+    30% {
+        width: 10px;
+        height: 10px;
+        background-color: white;
+        border-radius: 10px;
+    }
+    60% {
+        width: 150px;
+        height: 30px;
+        border-radius: 0px;
+    }
+    80% {
+        width: 170px;
+        border-radius: 10px;
+    }
+    100% {
+        width: 220px;
+    }
+    
+}
+.animirani-input {
+    display: block;
+    box-sizing: border-box;
+    padding: 5px;
+    margin: 5px;
+    border: 1px solid red;
+    animation: prikaz-inputa 4s forwards;
 }
