--- a/project/animacije.css
+++ b/project/animacije.css
@@ -70,3 +70,34 @@
     border: 1px solid red;
     animation: prikaz-inputa 4s forwards;
 }
+.animirani {
+    display: inline-block;
+    border: 1px solid black;
+    padding: 10px;
+    box-sizing: border-box;
+    width: 200px;
+    height: 40px;
+    text-align: center;
+    font-size: 12px;
+}
+@keyframes animiraj-box {
+    0% {
+        transform: rotate(0deg);
+        color: black;
+    }
+    45% {
+        transform: rotate(180deg); 
+        color: red;  
+    }
+    80% {
+        transform: rotate(355deg); 
+        color: red;
+    }
+    100% {
+        transform: rotate(360deg);
+        color: black;
+    }
+}
+.animirani:hover {
+    animation: animiraj-box 3s forwards;
+}
